[ubuntu16_cuda8_cudnn6_tf version 0.1.0] first commit

--- a/dockers/ubuntu16_cuda8_cudnn6_tf/requirements.txt
+++ b/dockers/ubuntu16_cuda8_cudnn6_tf/requirements.txt
@@ -1,13 +1,13 @@
-h5py
-numpy
-pandas
-Pillow
-matplotlib
-scikit-image
-scikit-learn
-scipy
-six
-shapely
-tifffile
-tensorflow-gpu
-tensorflow-tensorboard
+numpy==1.13.3
+pandas==0.21.0
+Pillow==4.3.0
+matplotlib==2.0.2
+scikit-image==0.13.1
+scikit-learn==0.19.1
+scipy==1.0.0
+six==1.11.0
+shapely>=1.6
+tifffile>=0.12.1
+h5py==2.7.1
+tensorflow-gpu==1.4.0
+tensorflow-tensorboard==0.4.0rc3
